--- a/site/scss/styles.scss
+++ b/site/scss/styles.scss
@@ -3,6 +3,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
+$bgColor:#4A6B90;
+$primaryColor:#00C2FF;
+$textColor:#1A1B22;
+$primaryFont:Roboto Slab;
+$secondFont:Roboto;
 /* Styles */
 * {
     padding: 0;
@@ -28,14 +33,14 @@
     align-items: center;
     justify-content: space-between;
     color:white;
-    background: #4A6B91;
+    background: $bgColor;
     box-shadow: inset 0px -1px 0px #D1D2D6;
     z-index: 100;
 
 }
 
 .header--logo {
-    font-family: Roboto Slab;
+    font-family: $primaryFont;
     font-weight: bold;
     font-size: 20px;
     line-height: 24px;
@@ -63,7 +68,7 @@
     display: flex;
     align-items: center;
     padding: 0 17px;
-    font-family: Roboto;
+    font-family: $secondFont;
     font-weight: 500;
     font-size: 18px;
     line-height: 24px;
@@ -71,7 +76,7 @@
 }
 .link:hover {
     transition: 400ms;
-    color:#00C2FF;
+    color:$primaryColor;
 }
 .icon {
     width: 24px;
@@ -85,7 +90,7 @@
     text-align: center;
     margin: 0 17px;
     padding: 12px 20px;
-    font-family: Roboto;
+    font-family: $secondFont;
     font-style: normal;
     font-weight: bold;
     font-size: 18px;
@@ -98,7 +103,7 @@
 
 .link--btn:hover {
     box-shadow: 0px 1px 5px #D1D2D6;
-    background: #00C2FF;
+    background: $primaryColor;
     transition: 400ms;
 }
 
@@ -111,37 +116,34 @@
 }
 
 .title {
-    font-family: Roboto;
+    font-family: $secondFont;
     font-style: normal;
     font-weight: normal;
-    color: rgba(26, 27, 34, 0.5);
+    color: $textColor;
+    opacity: 50%;
 }
 
 .blue {
-    color:#00C2FF;
+    color:$primaryColor;
 }
 .subtitle {
-    font-family: Roboto Slab;
+    font-family: $primaryFont;
     font-style: normal;
     font-weight: normal;
-    color: #1A1B22;
+    color: $textColor;
 }
 
 .keywords {
-    font-family: Roboto;
+    font-family: $secondFont;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
     line-height: 24px;
 
-    color: #1A1B22;
+    color: $textColor;
 }
 
 /* Основной контейнер для статей */
-
-.hero--content {
-
-}
 
 /* Карточка статьи */
 
@@ -185,7 +187,7 @@
 .card--type {
     display: flex;
     padding: 0 12px;
-    font-family: Roboto;
+    font-family: $secondFont;
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
@@ -193,7 +195,7 @@
     text-align: center;
     align-items: center;
     justify-content: center;
-    color: #000000;
+    color: $textColor;
     background: #ffffff;
     border-radius: 10px;
 }
@@ -226,7 +228,7 @@
 }
 
 .card--date {
-    font-family: Source Sans Pro;
+    font-family: $primaryFont;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
@@ -239,7 +241,7 @@
 }
 
 .card--title {
-    font-family: Roboto Slab;
+    font-family: $primaryFont;
     font-style: normal;
     font-weight: normal;
     font-size: 26px;
@@ -249,7 +251,7 @@
 }
 
 .description {
-    font-family: Roboto;
+    font-family: $secondFont;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
@@ -266,7 +268,7 @@
 }
 
 .card--resource {
-    font-family: Roboto Slab;
+    font-family: $primaryFont;
     font-style: normal;
     font-weight: bold;
     font-size: 16px;
@@ -286,13 +288,13 @@
     display: flex;
     width: 100%;
     align-items: center;
-    background: #4A6B90;
+    background: $bgColor;
     color: white;
     z-index: 100;
 }
 
 .copyright {
-    font-family: Roboto;
+    font-family: $secondFont;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
